🐛 fix menu covering the whole view
because of only translation animation, the menu was covering everything. fixed by adding pointer-events: none to hidden menu and ignoring it again on bigger screens

--- a/src/sass/MAIN-SECTIONS/1-header/menu.sass
+++ b/src/sass/MAIN-SECTIONS/1-header/menu.sass
@@ -67,6 +67,9 @@ nav
         a
           color: $light !important
 .menu-hidden
+  pointer-events: none
+  .hamburger
+    pointer-events: all
   nav
     transform: translateX(-100%)
   .room-menu
@@ -119,6 +122,7 @@ nav
     transform: none !important
 
   .menu-hidden
+    pointer-events: all
     nav, .room-menu
       transform: none
 
